# Primitiv

./: Block.cpp  Block.h  CMakeLists.txt  Circle.cpp  Circle.h  Primitiv.h  README.md  Rectangle.cpp  Rectangle.h  Spring.cpp  Spring.h  Square.cpp  Square.h  Triangles.cpp  Triangles.h  Vector2D.cpp  Vector2D.h  main.cpp
include/: Block.h  Rectangle.h  Spring.h  Triangles.h  Vector2D.h
src/: CMakeLists.txt  Circle.cpp  Rectangle.cpp  Triangles.cpp  Vector2D.cpp
